--- a/VideoPlayer.CSS
+++ b/VideoPlayer.CSS
@@ -13,9 +13,9 @@ Body {
     Border: 3Px Solid;
 }
 
-#Medio {
+#Media {
     Width: 100%;
-    Height: 100%;
+    Height: 204Px;
     Text-Align: Center;
     Border-Radius: 8Px;
     Border: 3Px Solid;
